- fixed scroll indicator so elements behind it are not blocked

--- a/styles.css
+++ b/styles.css
@@ -219,7 +219,9 @@ Buttons
     position: fixed;
     bottom: 2%;
     z-index: 10;
-    width: 100vw;
+    width: 10vw;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .scroll-indicator {
@@ -1030,24 +1032,7 @@ footer ul {
         text-decoration: underline;
     }
 
-    .circle-container {            /* two circle buttons underneath ABOUT */
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: center;
-    }
-
-    .progress-bar-container {
-        width: 100%;
-        height: 2px;
-        background-color: #fff;
-        margin: auto;
-    }
-
-    .progress-bar {
-        height: 2px;
-        width: 0%;
-        background-color: var(--green);
-    }
+    
 
     /* header section rules */
 
